# wrs-drone-template

controller/: CMakeLists.txt  YourDroneController.cpp
model/: YourDrone.body
project/: YourDrone.cnoid
